2010-02-28  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Added interface for swatch info localization
   Workaround for not using GTK+ style

2010-01-31  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/__init__.py,swatchbooker.pyw:
   Bugfixes (thanks to Максим)

2010-01-28  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Added drag and drop + bugfixes

2010-01-26  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Changed the "selected" look for swatch icons

2010-01-25  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Add support for line breaks in the grid view

2010-01-22  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker_de.ts,swatchbooker_de.qm:
   Added german translation (thanks to Christoph Schäfer)
 * swatchbooker.pro:
   Make it easier to update language files (pylupdate4 swatchbooker.pro)

2010-01-18  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker_ru.ts,swatchbooker_ru.qm:
   Added russian translation (thanks to Alexandre Prokoudine)

2010-01-17  Olivier Berten  <olivier.berten@gmail.com>

 * New release: SwatchBooker 0.5

2010-01-16  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Improved group editing + bugfixes
   Getting further with interface translatability
 * swatchbooker_fr.ts,swatchbooker_fr.qm:
   Added french translation
 * sbconvert.py:
   Added command-line conversion utility
 * swatchbook/codecs/:
   Bugfixes

2010-01-12  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbooker.pyw:
   Added recent files list
   First steps towards interface translatability
 * swatchbook/codecs/sbz.py:
   Some fixes

2009-12-25  Olivier Berten  <olivier.berten@gmail.com>

 * swatchbook/__init__.py,swatchbooker.pyw:
   Added extra swatch informations (like NCS,CBN,Munsell values)
 * swatchbook/codecs/:
   Modularization + improvements

2009-10-22  Olivier Berten  <olivier.berten@gmail.com>
